# advent-of-code-2022

./: .gitignore  Cargo.toml  README.md  monkey.pest
.cargo/: config
.github/workflows/: ci.yml  readme-stars.yml
src/: lib.rs  main.rs
