[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["miam-miam100 <MiamMiam@mailbox.org>", "Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
itertools = "0.10.5"
num-integer = "0.1.45"
pathfinding = "4.0.0"
pest = "2.5.1"
pest_derive = "2.5.1"
pico-args = "0.5.0"
prse = {git = "https://github.com/miam-miam100/prse"}
